--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.1"
+    "react-router-dom": "^6.26.1",
+    "rollup": "^4.22.4",
+    "vite": "^5.4.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
@@ -29,7 +31,6 @@
     "postcss": "^8.4.45",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.3",
-    "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1"
+    "typescript-eslint": "^8.0.1"
   }
 }
